// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`puz parseBinaryFile extracts expected Puzzle object from "Feb0308_oddnumbering.puz" 1`] = `
Object {
  "author": "Matt Ginsberg / Will Shortz",
  "clues": Array [
    "Artist's digs, maybe",
    "Sainted pope of A.D. 683",
    "Ancient Mexican people",
    "Evidence of dandruff",
    "Facilities",
    "Totally accurate",
    "-",
    "Slips",
    "Hydrocarbon suffix",
    "Execrate",
    "Bone formation",
    "Mathematical sequence of unknown length",
    "Pineapple desserts",
    "___ Bator",
    "A pop",
    "Na2CO3",
    "Dental filling",
    "Literature's Lorna",
    "Lose little by little",
    "-",
    "\\"___, gorgeous!\\" (Fanny Brice's comment to herself when looking in the mirror)",
    "U.R.L. lead-in",
    "One of wine's Gallo brothers",
    "Autobiographical short story by Edgar Allan Poe",
    "Israeli P.M. Olmert",
    "Marisa of \\"What Women Want\\"",
    "1974 Mocedades hit",
    "Careful consideration",
    "Men's fashion accessories",
    "They may be funny or bright",
    "Cork shooter",
    "Neighbor of Switz.",
    "\\"Biography\\" network",
    "Accelerated",
    "Threw off the scent",
    "Educator Maria",
    "Check list?",
    "Subatomic particle that is a nuclear binder",
    "Canonized mlle.",
    "More encouraging",
    "Mideast money",
    "Third word of \\"America\\"",
    "Bad dancer's handicap",
    "Blue Devils' and Tigers' org.",
    "\\"Enough!\\"",
    "Collected",
    "Mistress",
    "Contact lens solutions",
    "Bridges in Hollywood",
    "They're better than one",
    "The \\"ten\\" in \\"hang ten\\"",
    "Reactionary",
    "Flower also called a naked lady",
    "Hero maker",
    "Old dirk",
    "Elton's johns",
    "Unblemished",
    "Blind element",
    "Stereotypical reaction to Elvis",
    "Lineage",
    "Failings",
    "Magneto's adversaries, in comic books",
    "Lugs",
    "Breezes (through)",
    "Spread in a spread",
    "Quite wrong",
    "-",
    "Passé",
    "Business position",
    "-",
    "Word before and after \\"after\\"",
    "Classic Toyota sports cars",
    "Cross product",
    "___ Bradshaw, \\"Sex and the City\\" role",
    "Geom. figure",
    "Wynken, Blynken and Nod, e.g.",
    "Turf, as opposed to surf",
    "Dancer Alvin",
    "Disco term meaning \\"galore\\"",
    "Malodorous",
    "Punch",
    "French Sudan, today",
    "Become part of",
    "Raspberry",
    "Imp",
    "\\"___ Angel,\\" 1933 film",
    "Scratch sheet listings",
    "Place to get dates?",
    "Fronded plant",
    "Slams",
    "Fictional submariner",
    "Fannie ___ (securities)",
    "Civil rights march site, 1965",
    "Family",
    "-",
    "Jupiter or Mars",
    "Wise",
    "___ Gay, W.W. II bomber",
    "-",
    "Repeated John Gielgud role",
    "Ointment ingredient",
    "Popular song from Broadway's \\"The Wiz\\"",
    "Subject of the book \\"Last Flight\\"",
    "Setting for \\"Driving Miss Daisy\\"",
    "-",
    "Titanic message",
    "Arctic diver",
    "Runs",
    "Call, or call on",
    "Turkish pooh-bahs",
    "Eponymous German electrophysicist",
    "Lake ___, third-largest lake in Africa",
    "Begets",
    "Imagine, informally",
    "Sectioned, as a window",
    "Prince Valiant's wife",
    "Tapestry threads",
    "Things on strings",
    "-",
    "Deterge",
    "-",
    "Month before Iyar",
    "\\"Socrate\\" composer",
    "First, in Frankfurt",
    "Prefix with -zoic",
    "Sitcom title role for Brandy Norwood",
    "Relig. title",
    "1997 Jim Carrey film",
    "Lady's man",
    "What a man and a woman become in marriage",
    "Anchorage-to-Fairbanks dir.",
    "Two-wheeled covered carriage",
    "Great ball of fire",
    "Hops-drying kilns",
    "Establishing a business",
    "Hero of Bellini's \\"I Puritani\\"",
    "Anticipate",
    "Mary Tyler Moore co-star",
    "Seinfeld, for one",
    "Feast",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 21,
  "isScrambled": false,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 1213,
    "unknown1": 28009,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 140,
  "solution": ".LOFT.DEADON..UPSIDECHELLO.ERNEST.ELEONORATOMEI.ERESTU.HARDLOOKTIECLIPS.POPGUN.AANDEPICKEDS.MISLED.PAYEES...STE.ROSIER.TIS....ACC.SALINES..TWOHEADSLOOS.SLAT..SWOON.XMENLOUTS.OLEO.TEEF.STALEALREADY.SUPRAS.CARRIE..TRIAD.STEAK.AILEY..SMELLY.JOININ.GREMLINOASIS.FERN.NEMO.SELMACLAN.DLEIF..SAGE.WINGKINGLEAR..EASEONT.SOS....AUK.SPATES.OHM...SPAWNS.PEARLS.CLEANSEPALEO.MOESHA.LIARLIARONEFLESH.HANSOM.OASTSSETTINGS.ARTURO.AWAITEDASNER..STANDC.DINE.",
  "state": ".----.------..------------.------.-------------.------.----------------.------.------------.------.------...---.------.---....---.-------..------------.----..-----.---------.----.----.------------.------.------..-----.-----.-----..------.------.------------.----.----.---------.-----..----.------------..-------.---....---.------.---...------.------.------------.------.----------------.------.-------------.------.------------..------.----.",
  "title": "NY Times, Sun, Feb 03, 2008  JUST FOLLOW DIRECTIONS",
  "width": 21,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "av110622.puz" 1`] = `
Object {
  "author": "Ben Tausig",
  "clues": Array [
    "Fallen angel",
    "Let stand, in editing",
    "Top opening",
    "Conveyance for Marty McFly",
    "From the top",
    "Like some holidays",
    "Commander Deanna on \\"Star Trek: The Next Generation\\"",
    "Cannondale alternatives",
    "It's a trick",
    "One way to store data",
    "\\"___ the best minds of my generation ...\\"",
    "Palinesque prefix before \\"stream\\"",
    "Deceive",
    "\\"That feels amazing ...\\"",
    "Minnesota shopping mecca, for short",
    "Brand with blue and pink test results",
    "MC with \\"Still da Baddest\\"",
    "Some charity events",
    "Chain with sausage links",
    "Irish revolutionary Robert",
    "What a fugitive uses to hide his head?",
    "Seattle's ___ Place Market",
    "Nickname for a demon doing comedy?",
    "T-Shirt revolutionary",
    "Batshit Cruise",
    "Some cereal units",
    "Big name in pads",
    "Whatever-it's-called",
    "Day's end, to a poet",
    "Tic-tac-toe loser",
    "Jerry's fictional ex",
    "\\"Fin\\" Tutuola portrayer on \\"Law & Order: SVU\\"",
    "Srta. in France",
    "First president of the SCLC",
    "'70s-'80s princess",
    "Delt neighbor",
    "Bad spell",
    "Patsy Cline's record label",
    "Result of some court bargaining",
    "Non-commercial TV spots",
    "Trattoria beverage",
    "User's entry point",
    "Cute animal fawned over by murderers, whoremongers, idolaters, and liars?",
    "Mass units: Abbr.",
    "Foxholes",
    "\\"That's really annoying!\\"",
    "Valuable fantasy football picks, for short",
    "Org. in 2008 negotiations with GM",
    "Peninsula with delicious avocados",
    "Gibson's \\"Lethal Weapon\\" role",
    "Blood sugar",
    "Shows exasperation with",
    "Pass a law about, maybe",
    "Cold War letters",
    "Monopoly purchase: Abbr.",
    "Mount McKinley's national park",
    "Precinct animal",
    "Cool off naturally",
    "iCloud company",
    "A billion years",
    "The FBI, to the mob",
    "Face",
    "Mentor to fruit salad chefs?",
    "Cold holidays in Vietnam",
    "Root in some fake meat",
    "\\"This ___ outrage!\\"",
    "Slave dancer in Jabba the Hutt's palace",
    "Polite request to an assistant on a home improvement project?",
    "NYY rival",
    "Piss off",
    "One-time YouTube sensation Zonday",
    "Erstwhile roadside eateries, familiarly",
    "Adult subcategory",
    "Theme park transportation",
    "Actress Donovan of \\"Clueless\\"",
    "___ terrier",
    "Maker of robots",
    "Foul-mouthed comedian Bob",
  ],
  "copyright": undefined,
  "fileVersion": "1.2",
  "height": 15,
  "isScrambled": false,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 78,
  "solution": "SATAN.TROI.LAMETRINA.RUNS.IHOPEMMET.ESCAPEHATTHEWICKEDWIT...TOM.OHS...KOTEXELAINE.MLLE.HEXDECCA.PLEA.VINO..HELLSKITTEN..QUIT.BAJA.RIGGSBAN.USSR.DENALISWEAT...EON.MUG...PITTINGCOACHBITPLEASE.HOJOSORAL.TRAM.ELISASKYE.SONY.SAGET",
  "state": "-----.----.---------.----.---------.---------------------...---.---...-----------.----.--------.----.----..-----------..----.----.--------.----.-----------...---.---...---------------------.---------.----.---------.----.-----",
  "title": "AV Club xword, 6 22 11",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "cs080904.puz" 1`] = `
Object {
  "author": "By Mel Rosen",
  "clues": Array [
    "Nocturnal ungulate with a long snout",
    "Unspoken, as an approval",
    "British Petroleum acquisition of 1998",
    "Annoying",
    "Co. known as \\"Big Blue\\"",
    "Chew out",
    "\\"Check this out!\\"",
    "Fill with cargo",
    "Numbered musical work",
    "C.I.A. predecessor",
    "Two-masted vessel",
    "Passed easily",
    "Electrical units",
    "Philosophy for doers",
    "Northernmost Pennsylvania county",
    "2008 Denver conventioneers, informally",
    "Microscope slide creature",
    "Semicircular church section",
    "Mule's mother",
    "Nebula composition",
    "Rostand's long-nosed lover",
    "Prissy",
    "\\"Bleah!\\"",
    "Soapmaking solutions",
    "Blini cousins",
    "Switch from plastic to paper?",
    "Matchbox item",
    "Op. ___ (footnote abbr.)",
    "\\"Present\\"",
    "Source of the Mississippi",
    "Calligraphy line",
    "Enthusiastic, as an attitude",
    "Birch kin",
    "Make shadowy",
    "Unfounded, as gossip",
    "\\"Don't Fence ___\\"",
    "Money in the bank (abbr.)",
    "Censorship-fighting org.",
    "\\"PT 109\\" actor Robert",
    "Submarine's evasive maneuver",
    "Patricia of \\"The Fountainhead\\"",
    "Tangential observation",
    "Four-footed lowlife",
    "Frank on a stick",
    "Slyly malicious",
    "Donny or Marie",
    "Samuel's teacher",
    "Andean wool source",
    "Yenta",
    "Mid-month day",
    "Cry from the pews",
    "Bath suds?",
    "Win unexpectedly",
    "Starchy",
    "Capital due north of Cyprus",
    "Den luxury, briefly",
    "Apt to opine",
    "Happening only a single time",
    "As expected",
    "Bars on necks",
    "Orbitz.com info",
    "Title used by hepcats",
    "Stet's opposite",
    "Affirm as true",
    "The buck stops here",
    "Signify",
    "___ to perfection",
    "Gp. on the range?",
    "Satan's doing",
    "Lively rhythmic entertainer",
    "Nero's 52",
    "René, par exemple",
    "Torch song topic",
    "Office assistant",
    "Mail carrier's beat",
    "Ornamental pitcher",
    "Was inventive, and then some",
    "\\"Don't make ___\\" (Mom's admonition)",
  ],
  "copyright": "© 2008 Mel Rosen. Distributed by CrosSynergy(TM) Syndicate",
  "fileVersion": "1.2",
  "height": 15,
  "isScrambled": false,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 78,
  "solution": "TAPIR.LOOK.ACEDAMEBA.APSE.MARECOSMICDUST.PRIMICK.LYES.CREPESTOYCAR...HERE.....ITASCA.BEDIMACCT.NEAL.ASIDECUR.CORNDOG.ELILLAMA.IDES.AMENUPSET.FORMAL.....HDTV...ONEOFFDADDYO.BANK.NRAEVIL.CLOGDANCERLOVE.AIDE.ROUTEEWER.LIED.AMESS",
  "state": "-----.----.---------.----.--------------.-------.----.------------...----.....------.---------.----.--------.-------.--------.----.---------.------.....----...------------.----.-------.--------------.----.---------.----.-----",
  "title": "September 4, 2008 - \\"CD Collection\\"",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_diagramless.puz" 1`] = `
Object {
  "author": "  Patrick Blindauer / Will Shortz  ",
  "clues": Array [
    "Panorama",
    "Action word",
    "___ and outs",
    "Biol. or chem.",
    "The first X in X-X-X",
    "Baldwin of \\"30 Rock\\"",
    "A caddy may hold them",
    "According to",
    "P.T.A. place: Abbr.",
    "Frozen treat first made by hand in 1866",
    "Women's soccer star Chastain",
    "1990 Stallone sequel",
    "Late times, in ads",
    "Da or ja",
    "Piano piece",
    "Ending with switch",
    "Ground transportation option",
    "Gumption",
    "Poor Richard's Almanack item",
    "___ set (hardware store offering)",
    "Smooth operator",
    "Stair part",
    "Adds punch to, as punch",
    "Flue residue",
    "Set, as a price",
    "Nine-digit ID",
    "Tones",
    "John known as the Teflon Don",
    "Squids' squirts",
    "Certain marsupials, briefly",
    "Floor of wooden strips",
    "Dramatist Sean and others",
    "\\"I'll get this one\\"",
    "Celestial beings",
    "Table scraps",
    "Name in a brand that rivals 8-Across",
    "Banal",
    "Shrubland",
    "Prince of Darkness",
    "Sierra Nevada, for one",
    "St.-Tropez locale",
    "\\"___ Ruled the World\\" (1996 hip-hop hit)",
    "Buff runner?",
    "River isle",
    "Online newsgroup features",
    "Sitarist Shankar",
    "Regular",
    "Sword handles",
    "Like some numerals",
    "Cast out",
    "Quintessence",
    "Procure",
    "Appliance giant",
    "Actor Flynn",
    "A Gershwin",
    "Thor who wrote \\"Kon-Tiki\\"",
    "Sounds of doubt",
    "Spot to mend",
    "Dehydrated",
    "Setting for many a joke",
    "Hurdler's assignment",
    "Folies-Bergère designer",
    "Simple tops",
    "Astronomically large distance: Abbr.",
    "___ Strauss",
    "Sporty Ford",
    "Susan of \\"L.A. Law\\"",
    "Dangerous job",
    "\\"Nifty!\\"",
    "Game with matchsticks",
    "The Pleiades, e.g.",
    "Islam, e.g.: Abbr.",
    "Holdup cause",
    "Nugatory",
    "Banks of \\"America's Next Top Model\\"",
    "Cone's counterpart",
    "The Magic City of the Plains",
    "Wichita-to-Minneapolis dir.",
    "Observer that's found in 8-, 31-, 48- and 66-Across",
    "Not ruddy",
    "Rigging rope",
    "Actress Davis",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 17,
  "isScrambled": true,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 16930,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1025,
  },
  "notepad": "This diagramless is 17 squares wide by 17 squares deep and has an asymmetrical pattern suggested by the puzzles theme. The first square across is the seventh square in the first row.
",
  "numberOfClues": 82,
  "solution": "::::::YRIGY:::::::::::OYILSAM::::::LYVWBSYCNZUZIRL:MNBNMKF:::QIGVZKRSDATV::LZK::LRPNYAUBL:PQUKJJD:CVRXRPR:UALSSWCST:ZNZBPYGSMZ::BLKFKLUW:::CCCY:::QUUS:::FIMQRXQ:::HCVDDFCGOZ:CYVCTGBXI:HNCYFEJ:FWJZSAO:CHDLSSZGG::WYB::TOBKZUITEANV:::VZEDFJE:CGNQHNPOVAHFTJT::::::ZCAPCAJ:::::::::::KMIVZ::::::",
  "state": "::::::-----:::::::::::-------::::::---------------:-------:::------------::---::---------:-------:-------:---------:----------::--------:::----:::----:::-------:::----------:---------:-------:-------:---------::---::------------:::-------:---------------::::::-------:::::::::::-----::::::",
  "title": "NY Times, Sun, Feb 24, 2008  DIAGRAMLESS",
  "width": 17,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_locked.puz" 1`] = `
Object {
  "author": "Alex Boisvert / Will Shortz",
  "clues": Array [
    "Source of troubles",
    "Eat out?",
    "Hindu drink of the gods",
    "Play with the line \\"Hell is other people\\"",
    "Guys",
    "Revolutionary patriot James",
    "Start to smell, maybe",
    "Union inits. starting in 1886",
    "\\"Well, I'll be!,\\" as it might be said on September 19",
    "___ Santiago, 1987 N.L. Rookie of the Year",
    "City near Provo",
    "Scratches, with \\"out\\"",
    "___ of God",
    "\\"Later!\\"",
    "200 milligrams",
    "Like soldiers known as Gurkhas",
    "\\"Later!\\"",
    "What the 1939 50,000-word novel \\"Gadsby\\" completely lacks",
    "Bank offerings",
    "\\"Uh-huh\\"",
    "Turns down",
    "Spirit",
    "___ leaf",
    "Stick",
    "Irritation suffix",
    "Irritated, after \\"in\\"",
    "Wiped out, slangily",
    "Top",
    "Like most music",
    "What debaters debate",
    "Persian, e.g.",
    "Not yet delivered, after \\"in\\"",
    "Hedge word",
    "W.W. II air ace who lent his name to an airport",
    "Wee hour",
    "\\"That's fine\\"",
    "Meyerbeer output",
    "Pendant adornments",
    "___ Day (September 19)",
    "Some diner equipment",
    "It has a long tongue",
    "Student excuser",
    "Live folk album of 1968",
    "How some dares are done",
    "Outline",
    "Bar tenders?: Abbr.",
    "Places for dust to collect",
    "D.T.'s",
    "Assn.",
    "Italian restaurant chain",
    "TV newswoman Soledad",
    "Doorstep numbers?",
    "Apparently is",
    "Insurance providers, for short",
    "\\"Super Trouper\\" group, 1980",
    "___ 2600 (hit product of the 1970s-'80s)",
    "Kind of delay",
    "Poke",
    "Joe",
    "Packers QB whose #15 jersey is retired",
    "\\"This instant!\\"",
    "LAX datum",
    "One end of the Welland Canal",
    "Record",
    "Bit of chicken feed",
    "Org. with the annual Eddie Gottlieb Trophy",
    "Hi-___",
    "At someone's mercy",
    "Ones needing career counseling, maybe: Abbr.",
    "Shell locations",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 15,
  "isScrambled": true,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 40861,
    "unknown1": 28009,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 70,
  "solution": "BDIBWGUECUC.SNYDLFXAILCOLU.WTXTOYBGUXTSJQ.IKNUSXUX..DOU.XYPNXRFS.PVLI.IUOIELMW.FTMSB.TRZHB...SFKLA.RSNKFDCQUUSMBUCOOABHTKMJKJL.MBWUZ...ZEELL.PNRRO.CKGAQJLC.SUQN.IJUNLOON.PGY..ZLPFRAXQ.FBJJSPCDKMMRMG.QKPCUZYBJBVCVG.DQKDRBLBFNN",
  "state": "-----------.--------------.--------------.--------..---.--------.----.--------.-----.-----...-----.---------------------------.-----...-----.-----.--------.----.--------.---..--------.--------------.--------------.-----------",
  "title": "NY Times, Fri, Sep 19, 2008",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_partlyfilled.puz" 1`] = `
Object {
  "author": "Ken Bessette / Will Shortz",
  "clues": Array [
    "Stars and Stripes, e.g.",
    "Admit (to), with \\"up\\"",
    "Reindeer herder",
    "Geometry calculation",
    "\\"My pleasure\\"",
    "Places where lines meet",
    "Black power hairdo, for short",
    "Dunderpate",
    "The \\"C\\" in N.Y.C.",
    "Divided 50/50",
    "French greeting",
    "Dirge",
    "Schooner fill",
    "Billet-doux",
    "Join",
    "Old message system",
    "___ of Sandwich",
    "Cause of a game cancellation",
    "Unaccompanied",
    "\\"Here he is now!\\"",
    "Wails",
    "Dueling sword",
    "Black card",
    "Talks one's head off",
    "French summer",
    "Twinings selections",
    "Perched on",
    "Deposed Iranian",
    "Sign before Virgo",
    "Big Apple ave.",
    "Be undecided",
    "\\"Roots,\\" for one",
    "___ of Wight",
    "Message on a shipping crate",
    "Geologic time unit",
    "Pigeon's sound",
    "___ Wednesday",
    "Suds maker",
    "Mounted, as a horse",
    "Big elevator manufacturer",
    "___ too soon",
    "Talking maybe a little too fast",
    "Droid",
    "Snapshot",
    "Wedding cake feature",
    "Killer whale",
    "Sgt. Snorkel's dog",
    "Fable writer",
    "Republican, Democratic, Green, etc.",
    "No. on which a magazine's ad rates are based",
    "\\"Luann\\" or \\"Blondie\\"",
    "Freudian one",
    "Persist to completion",
    "Knight time?",
    "A score",
    "End result",
    "Prefix with center",
    "French place of learning",
    "Mail receiver, in brief",
    "Column's counterpart",
    "Interstate entrance or exit",
    "Fish after which a cape is named",
    "Logic diagram",
    "Repeat",
    "Long Island airfield town",
    "___ Ness monster",
    "Itsy-bitsy bit",
    "Winter truck attachment",
    "Command center? ... or where you might hear the starts of 17-, 28- and 49-Across",
    "God, in Italy",
    "Brain scan, for short",
    "Bounding main",
    "Nephew of Donald Duck",
    "For whom the bell tolls, in a John Donne poem",
    "Numerical prefix with -ber",
    "Bygone Montreal ball club",
    "Quiet exercise",
    "Remove from the freezer",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 15,
  "isScrambled": false,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 28009,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 78,
  "solution": "FLAG.FOCI.SALUTEARL.RAIN.ALONESPEAKOFTHEDEVILSPADE..YAPS.ETE...TEAS.LEO.LEXSITONTHEFENCE..ASH.SOAP..GOTONGLIB.PHOTO.OTTOAESOP..CIRC.EIN..STAYTHECOURSEEPI.ROW.RAMP...COD.TREE..ISLIPOBEDIENCESCHOOLLOUIE.THEE.OCTOEXPOS.YOGA.THAW",
  "state": "FLAG.----.-----EARL.----.-----S--------------S----..----.---...----.---.----------------..---.----..---------.-----.---------..----.---..----------------.---.----...---.----..-------------------------.----.---------.----.----",
  "title": "NY Times, Mon, Mar 10, 2008",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_rebus_with_notes_and_shape.puz" 1`] = `
Object {
  "author": "  Caleb Madison / Will Shortz  ",
  "clues": Array [
    "Waxed",
    "Ruiner of many a photo",
    "Charged",
    "Filmmaker Von Stroheim",
    "Theme of this puzzle",
    "First name in erotica",
    "Without ___ (riskily)",
    "It may be wrinkled",
    "Ancient Semitic fertility goddess",
    "Bakery employee",
    "Elvis Presley's \\"___ Not You\\"",
    "They might be chocolate",
    "Detective's need",
    "Like some six-packs",
    "See 32-Down",
    "Vile smile",
    "___ Flynn Boyle of \\"Twin Peaks\\"",
    "Request at a laundry",
    "Like some keys",
    "Dye plant",
    "Popular women's fragrance",
    "Together, in music",
    "Makes people offers they can't refuse?",
    "That, to Tomás",
    "Apportionment",
    "Set of values",
    "View from Marseille",
    "Relatives, slangily",
    "Home of \\"The Last Supper\\"",
    "You might end up with a bum one",
    "Place for picnicking and dog-walking",
    "Hill dwellers",
    "___ alla genovese (sauce)",
    "Actress Tyler",
    "City where 32- and 12-Down is found",
    "Child, for one",
    "Also sends to, as an e-mail",
    "With 12-Down, locale of the 4-Down",
    "\\"Ishtar\\" director",
    "Adler who outwitted Sherlock Holmes",
    "You might give a speech by this",
    "___ impulse",
    "Ultrasecret org.",
    "___ + grenadine + maraschino cherry = Roy Rogers cocktail",
    "Illumination of manuscripts, and others",
    "Headline-making illness of 2002-03",
    "Dis",
    "Mushroom maker, for short",
    "Tony nominee for \\"Glengarry Glen Ross\\"",
    "Interrogator's discovery",
    "Cultural org.",
    "Retain",
    "\\"That mad game the world so loves to play,\\" to Jonathan Swift",
    "Rand who created Dagny Taggart",
    "___ ready",
    "Striped quartz",
    "Peter out",
    "It's often unaccounted for",
    "Allen in American history",
    "___ pop, music genre since the 1980s",
    "All ___",
    "Nocturnal bloodsucker",
    "Lynn who sang \\"We'll Meet Again\\"",
    "Port near the Red Sea",
    "Yellow squirt?",
    "Pie chart figs.",
    "\\"Wishing won't make ___\\"",
    "Tony Musante TV series",
    "Extracted chemical",
    "Punishment unit",
    "Frost",
    "Options during computer woes",
    "James of jazz",
    "Competitor of Ben & Jerry's",
    "\\"Thus ...\\"",
    "Spotted",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 15,
  "isScrambled": false,
  "markupGrid": Array [
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
  ],
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 16632,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": "TEEN PUZZLEMAKER WEEK
All the daily crosswords this week, Monday through Saturday, have been contributed by puzzlemakers under the age of 20. Today's crossword is by Caleb Madison, 15, of New York City. He is a sophomore at Bard High School in Manhattan. This is his fourth puzzle for The Times.
",
  "numberOfClues": 76,
  "rebus": Object {
    "grid": Array [
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      1,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      1,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      1,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
    ],
    "solution": Object {
      "1": "STAR",
    },
  },
  "solution": "GREW.ANAIS.LABSLARA.NOSCH.EBONANIL.ESTEE.ADUERACKETEERS.DOLEETHOS.......MER...FAM.RAP.LIV.CHEF.IRENE.ONANCOLA.LOSTS.SARSSLAM.ATEST.ALDA.LIE.NEA.OWN...AYN.......AGATETWEE.VAMPIREBATTOMA.EDUCT.LASHHOAR.RESTS.ETTAEDYS.ANDSO.SEEN",
  "state": "----.-----.--------.-----.--------.-----.--------------.---------.......---...---.---.---.----.-----.--------.-----.--------.-----.----.---.---.---...---.......---------.--------------.-----.--------.-----.--------.-----.----",
  "title": "NY Times, Thu, Sep 11, 2008  When this puzzle is done, connect the circled letters in alphabetical order, and then back to the start, to reveal something seen on the 32-Down 4-Down.",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_sun_rebus.puz" 1`] = `
Object {
  "author": "  Jeremy Newton / Will Shortz  ",
  "clues": Array [
    "Portraitist of George Washington",
    "Weightlifter's helper",
    "Have a break at 4:00, say",
    "Troop troupe: Abbr.",
    "Basic travel path",
    "First name in gossip",
    "Paris was part of it",
    "Robot maid on \\"The Jetsons\\"",
    "Equips with new clips",
    "Small African antelope",
    "It's darn likely",
    "\\"My, my, old chap!\\"",
    "Dusk, to Donne",
    "Sorority chapter",
    "Unlikely event for puritans",
    "MADD member",
    "Foe of Spider-Man",
    "Like some modern maps",
    "Coffee table item",
    "Leader of a flock",
    "Do away with",
    "Spreader of holiday cheer",
    "Mustang rivals",
    "Gene who sang \\"Back in the Saddle Again\\"",
    "Singer who said \\"At least I had that, one guy understood me\\"",
    "Cause of many uprisings",
    "Possible punishment for steroid use",
    "Enhance",
    "When Cannes heats up",
    "Native tongue of R&B singer Rihanna",
    "Bow to",
    "Wise guy",
    "Members of the bar?",
    "Ear part",
    "\\"Esq.\\" titleholders",
    "Biker's add-on",
    "Keep an eye out for",
    "Early Chinese dynasty",
    "Meager",
    "Admit defeat, in a way",
    "Prefix with sphere",
    "Lucratively",
    "Fuming",
    "Polite disclaimer",
    "ABC a.m. show, briefly",
    "Daring",
    "Last resort in poker, often",
    "Alvin and the Chipmunks, e.g.",
    "Experts at exports",
    "Doesn't waver",
    "Euripides drama",
    "Genre explored by Run-D.M.C. and Aerosmith",
    "G.P.S. suggestion",
    "Diurnally",
    "\\"Hop ___!\\"",
    "Mexican mouse chaser",
    "Bottle opener's surprise",
    "Vegas openings?",
    "Inner circle",
    "Untangles, in a way",
    "Cyberball maker",
    "Pop singer who appeared in the movie \\"Sgt. Pepper's Lonely Hearts Club Band\\"",
    "Proust title character",
    "It's called in a political convention roll call",
    "Undercover device",
    "Job interview topic",
    "Campaigns for",
    "\\"Quite possibly\\"",
    "Surface-___",
    "Singles and jingles",
    "Sioux tribe member",
    "State capital on the Colorado River",
    "Sub with sauerkraut?",
    "White wine from Verona",
    "Economy-size",
    "W., e.g.: Abbr.",
    "Langston Hughes poem",
    "Cry at sea",
    "Professional with many contacts?",
    "Cancún resident, once",
    "Lords and ladies",
    "Farm call",
    "Hall's partner in pop",
    "\\"This is how it's done\\"",
    "Worth mentioning",
    "Pattern for light or sound",
    "Is past?",
    "Soft hat materials",
    "Scrape (out)",
    "Actors Max and Max Jr.",
    "Like some professors",
    "See",
    "___ Taylor, co-host of \\"Make Me a Supermodel\\"",
    "Sask. neighbor",
    "It appears when things go bad",
    "Drinks in frosted glasses",
    "Married",
    "Boils down",
    "Hit Sony product introduced in 1984",
    "Model after",
    "American, Swiss, etc.",
    "Thrill seeker",
    "Design feature of many a viaduct",
    "Lookout, maybe",
    "\\"OMG, that's sooo funny!\\"",
    "Kind of bar",
    "Squared away",
    "First name in cosmetics",
    "\\"If you ask me,\\" online",
    "The \\"A\\" of James A. Garfield",
    "Now, in Nogales",
    "Wages, before overtime",
    "Some exams for joint pain sufferers",
    "Litigant",
    "Symptom of catarrh",
    "Focused (on)",
    "Beer serving in a pub",
    "\\"Yippee!\\"",
    "Brisk pace",
    "Cavs, on a scoreboard",
    "Nativity figure",
    "Jabbers",
    "\\"Was it ___ I saw?\\" (classic palindrome)",
    "U.S. gas chain",
    "Samuel L. Jackson's character in \\"Pulp Fiction\\"",
    "Triple-edged sword",
    "Part of a horse's genealogy",
    "Were present?",
    "It might run in the rain",
    "Cool ___",
    "Filled (with)",
    "Genealogical grp.",
    "Part of a serial",
    "S, on a French compass",
    "Eroded",
    "It's usually said with the eyes closed",
    "Wig",
    "Egg holders",
    "Kind of skill",
    "Farm machine",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 21,
  "isScrambled": true,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 23056,
    "unknown1": 60768,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 140,
  "rebus": Object {
    "grid": Array [
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      2,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      1,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      3,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      13,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      4,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      23,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      5,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      0,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      6,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      9,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      7,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      8,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
    ],
    "solution": Object {
      "0": "OCT",
      "1": "JAN",
      "13": "DEC",
      "2": "FEB",
      "23": "NOV",
      "3": "MAR",
      "4": "APR",
      "5": "MAY",
      "6": "JUN",
      "7": "JUL",
      "8": "AUG",
      "9": "SEP",
    },
  },
  "solution": ".IJIHZY.LRFGZ...CWZVJ.YYWDDO.OEZRC.FLZPCYTQPNFDLK.DQINR.BBNOENWXPH.LIM.WCNE.BWNZ.KNBOIKX..KTCEC.EMPE.RGCAJBSLGZQKH..PYZXY.XZCPIUWQUANMEHHPWR..NTYLJ...VYHG..ACND.JESO...YNYHA..ZVFIS.DWVTVSVUEND.ICRSWC.DYKSL.UUFSNFFCMGFPMA.NGCDTNVTWWZNXG.ZQJZW.MRKKAA.PYKKWHZBGOR.RGXNE..XMFWO...YLNZ.TZRR..EOFX...PPXUY..XIGUCKIXLELDWCPEOF.LDCCW..TXLBCWWZESKPG.TWQR.JLUJW..LCQHOBH.AGGM.JPOW.VZJ.RRPHDJIIZV.YJHZH.CAGAFHZSJUVQRR.MYQGX.PEVCGC.RYICV...BZTRK.AZQAGX.",
  "state": ".------.-----...-----.------.-----.--------------.-----.----------.---.----.----.-------..-----.----.-------------..-----.------------------..-----...----..----.----...-----..-----.-----------.------.-----.--------------.--------------.-----.------.-----------.-----..-----...----.----..----...-----..------------------.-----..-------------.----.-----..-------.----.----.---.----------.-----.--------------.-----.------.-----...-----.------.",
  "title": "NY Times, Sun, Sep 14, 2008  YEAR-ROUND",
  "width": 21,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_v1_4.puz" 1`] = `
Object {
  "author": "Andrew J. Ries / Will Shortz",
  "clues": Array [
    "Top 10-rated sitcom each season from 1972 to 1976",
    "Physician Franz who coined the term \\"animal magnetism\\"",
    "Variant of a gene",
    "Unsurprising people to show up",
    "\\"Inside voices, please\\"",
    "___ Lodge",
    "Chilling",
    "\\"All right, why not\\"",
    "With 90-Down, first woman to lead a major party in Congress",
    "\\"Mm-hmm\\"",
    "Narrator of \\"Evita\\"",
    "Tremendous auditory pleasure, in slang",
    "Payment vouchers",
    "Drink after drink?",
    "Trunk fastener",
    "Not remotely",
    "Traveler's holder of bathroom supplies",
    "\\"Kind ___\\" (term of politeness)",
    "Dugout propeller",
    "Thickheaded",
    "Playground comeback",
    "Nevada senator Jacky",
    "Mexico City daily",
    "Dish of cooked buckwheat",
    "Site of a 2019 Trump/Kim meeting",
    "___ hug",
    "Moved stealthily, colloquially",
    "Not a nice look",
    "Pronounces breathily",
    "Sworn (to)",
    "Hearty pasta topping",
    "Fitting",
    "Absolute truth",
    "Make a decision",
    "A singer can carry one",
    "Some plumbing joints",
    "Ask too-personal questions",
    "Tailor's tool",
    "New Mexico county or its seat",
    "Uses as a perch",
    "Hit sign",
    "Mold into something new",
    "Wall St. professional",
    "Historic San Francisco thoroughfare",
    "Hotel rollouts",
    "\\"Look what I found!\\"",
    "___ y Plata (Montana's motto)",
    "Aid in tapestry-making",
    "Schubert compositions",
    "Itinerant sorts",
    "Outfits in the operating room",
    "Burning the midnight oil",
    "Dessert with a sugary syrup",
    "Drake, for one",
    "Something seen with a tiny flashlight",
    "Stockholm stock unit",
    "What cowboys are, in poker lingo",
    "High praise",
    "\\"Look at me - I did it!\\"",
    "Home of Spelman College",
    "Business transaction",
    "Property recipient, legally",
    "Precisely",
    "Saint in a children's rhyme",
    "___ Maria (coffee liqueur)",
    "Related to pitches",
    "Sister in a children's story",
    "Intensify, with \\"up\\"",
    "Small pain",
    "Upright building support",
    "Hall-of-Famer Musial",
    "Travel group",
    "Like some porch chairs",
    "Popular radio format",
    "Farmer's concern",
    "Big name in 1950s politics",
    "\\"Flowers\\" and \\"Sticky Fingers\\" for the Stones",
    "Some Sunday broadcasting",
    "Turn sharply",
    "John le Carré specialty",
    "Cakes and ___ (simple material pleasures)",
    "Buncha",
    "\\"No turning back now\\"",
    "Hockey venues",
    "Wonka portrayer",
    "Rock band with the 1994 4x platinum album \\"The Downward Spiral,\\" for short",
    "Many Jazz fans",
    "[See note]",
    "Elusive sort",
    "Smooth-talking",
    "List for charitable givers, for short",
    "___ Reader (quarterly magazine)",
    "Sunscreen ingredient",
    "Prefix with scope",
    "Bestow",
    "Something removed when changing a tire",
    "Pompous sort",
    "\\"The Wonder Years\\" star",
    "Domino, familiarly",
    "8/",
    "Goldman's partner in banking",
    "Throw in",
    "Symbol of poverty",
    "Former Indianapolis sports venue",
    "Unwieldy boat",
    "Visited out of deference (to)",
    "See 7-Down",
    "Pulsating",
    "Analyzed",
    "\\"Xanadu\\" band, briefly",
    "Bright light in inclement conditions",
    "Loose around the edges",
    "Peak in Genesis",
    "They have thick skins",
    "Good supply",
    "Doesn't bring up again, say",
    "Outcast",
    "\\"Sad to say ...\\"",
    "Go off",
    "Make blank",
    "Dodgers broadcaster Hershiser",
    "K-12",
    "Casting choice",
    "Legendary humanoid",
    "Colorless mode at a copy shop",
    "Shapeless mass",
    "Hacienda room",
    "Strong servings with dessert",
    "Mil. program discontinued in 1976",
    "Bit of dental work",
    "Head, in slang",
    "Where the Firestone tire company was founded",
    "\\"___ Beso\\" (Paul Anka hit)",
    "Sharp",
    "Bull ___",
    "Tilted, in Stilton",
    "Barbecue bone",
    "Awful-smelling",
    "Went back, as a tide",
    "Like the Chelsea neighborhood in Manhattan",
  ],
  "copyright": "© 2019, The New York Times (Published via Across Lite)",
  "fileVersion": "1.4",
  "height": 21,
  "isScrambled": false,
  "markupGrid": Array [
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
  ],
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": "Drop one letter from each set of circled letters in the grid to name a major-league baseball team. The letters thus removed, in order from top to bottom, will spell an appropriate answer at 76-Down.
",
  "numberOfClues": 140,
  "rebus": Object {
    "grid": Array [
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
    ],
  },
  "solution": "MAUDE.ONICE.CHITS.OARELSOL.KASHA.HANOI.BROSLUNK.SNEER.ASPIRATESMEATSAUCE.GOSPEL.TUNEELLS.PRY.TAPE.RESTSONRESHAPE.CASTROSTREET....ORO.LOOM..HOBOS...SCRUBSUITS.KRONA.TADATOAT.IVES.TIA..GRETELIMP.STUD.CONVOY.ADLAILPS.TELEVANGELISM.ALELOTTA.ARENAS.DEPP.NINUTAHNS..EEL.OILY.UTNEPERI.AWARD.FREDSAVAGE...SACHS..RAGS.TUB....PAIDRESPECTS.FOGLAMPLETSDIE.ALAS.ERR.ORELELHI.FLYROD.GRAYSCALEPORTWINES.ONLAY.AKRONESO.ACUTE.MOOSE.LEANTRIB.FETID.EBBED.ARTSY",
  "state": "-----.-----.-----.--------.-----.-----.--------.-----.------------------.------.--------.---.----.--------------.------------....---.----..-----...----------.-----.--------.----.---..---------.----.------.--------.-------------.--------.------.----.---------..---.----.--------.-----.----------...-----..----.---....------------.--------------.----.---.--------.------.------------------.-----.--------.-----.-----.--------.-----.-----.-----",
  "title": "NY Times, Sun, Mar 31, 2019 TAKE ONE FOR THE TEAM",
  "width": 21,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_weekday_with_notes.puz" 1`] = `
Object {
  "author": "  Natan Last / Will Shortz  ",
  "clues": Array [
    "Dance that simulates the drama of a bullfight",
    "Early Inverness resident",
    "Cadaverous",
    "Ticklee's cry",
    "\\"You have got to be kidding!\\"",
    "The Divine, to da Vinci",
    "City at the mouth of the Fox River",
    "Shade of red",
    "\\"She was ___ in slacks\\" (part of an opening soliloquy by Humbert Humbert)",
    "Baddie",
    "Chuck wagon fare",
    "Shady spot in a 52-Down",
    "Cousin of a cassowary",
    "___ fee",
    "One with fire power?",
    "1978 Bob Marley hit whose title words are sung four times before \\"... that I'm feelin'\\"",
    "Trick-taking game",
    "Faux Japanese reply",
    "One needing kisses, say",
    "Jazz duo?",
    "Nooks for books, maybe",
    "Furry folivores",
    "March instrument?",
    "It may be set with music",
    "Out",
    "Cudgel",
    "Believers' comments",
    "Au courant",
    "Keen",
    "Escaped",
    "Nutrition units",
    "Some essays",
    "\\"A Lonely Rage\\" autobiographer Bobby",
    "The farmer's wife in \\"Babe\\"",
    "Sound at an auto race",
    "Did a farrier's work",
    "It holds the line",
    "Foot of the Appian Way?",
    "Trouble, in a way",
    "Locale of some mirrors",
    "Start to like",
    "Letter-shaped girder",
    "Energetic 1960s dance with swiveling and shuffling",
    "Lord John Boyd ___, winner of the 1949 Nobel Peace Prize",
    "Study, say",
    "God of life, death and fertility who underwent resurrection",
    "Winston Churchill's Rufus, for one",
    "Pattern sometimes called \\"Persian pickles\\"",
    "They know the drill",
    "\\"I'm very disappointed in you\\"",
    "Turned up",
    "Child's play, perhaps",
    "Snitch",
    "Song verse",
    "Company that makes Aunt Jemima syrup",
    "Canal cleaner",
    "Menu option",
    "Teacher of Heifetz",
    "Fashion model Wek",
    "Area next to an ambulatory",
    "See 10-Down",
    "Ko-Ko's dagger in \\"The Mikado\\"",
    "Current happening?",
    "Letter-shaped fastener",
    "Daydreaming",
    "Kick in",
    "Days of old",
    "Worked the docks",
    "Waste of Congress?",
    "\\"You got it!\\"",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 15,
  "isScrambled": true,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 49648,
    "unknown1": 16032,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": "TEEN PUZZLEMAKER WEEK
All the daily crosswords this week, Monday through Saturday, have been contributed by puzzlemakers under the age of 20. Today's crossword is by Natan Last, 17, of Brooklyn. He is a first-year student at Brown University. This is his sixth puzzle for The Times.
",
  "numberOfClues": 70,
  "solution": "HRWLEXCZD..FZQPINPAIBASDK.IMRJLLQEVHDQAA.XUNTUJEP.UGFTXHHHEQ...HLJK.GUIG....KZJOR.XNPDGJOHIMFJQN.YDIV.ILBHTCNB.MMK.VEMEBAAC.WKEV.KZPXJBGFOPIOFJ.NHQVP....FIRU.EPOK...TCHMMSEZCD.XICCESWK.PFSGGDFUXUYYWO.MYKHIEUTCNDMEG..YXGDXMXEM",
  "state": "---------..--------------.--------------.--------.----------...----.----....-----.--------------.----.--------.---.--------.----.--------------.-----....----.----...----------.--------.--------------.--------------..---------",
  "title": "NY Times, Fri, Sep 12, 2008",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "nyt_with_shape.puz" 1`] = `
Object {
  "author": "Barry C. Silk / Will Shortz",
  "clues": Array [
    "Demanded without reason",
    "Lose strength",
    "Prefix with pressure",
    "Standoffish",
    "Give bad marks",
    "Signs of a bad outlet",
    "\\"Venice Preserved\\" dramatist Thomas",
    "Leader of Lesbos?",
    "Part of U.N.L.V.",
    "Natural bristle",
    "Year that Michelangelo began work on \\"David\\"",
    "One desiring change",
    "National flower of Mexico",
    "Illinois city, site of the last Lincoln-Douglas debate",
    "Unlikely attenders of R-rated films",
    "Favorable",
    "TV pooch",
    "FedEx rival",
    "Moon of Mars",
    "Unabridged",
    "Rudder locations",
    "Honor",
    "Injustice",
    "Move, to a real-estate broker",
    "Feel remorse for",
    "November 5, in Britain",
    "Kipling novel",
    "Not remote",
    "Thin as ___",
    "Depression",
    "Procure",
    "Humans last lived there in 2000",
    "Wild sheep of the western United States",
    "Batting average, e.g.",
    "___ citato",
    "___ Bator",
    "Quaint \\"not\\"",
    "Caboose",
    "Some deodorants",
    "Abbr. after Cleveland or Brooklyn",
    "Mocks",
    "Fair",
    "\\"La Gioconda\\" mezzo-soprano",
    "Flies over the Equator",
    "Salt Lake City player",
    "Annual Sunday event, with \\"the\\"",
    "Four Holy Roman emperors",
    "Bazaar units",
    "Iowa college",
    "Breezes (through)",
    "Go rapidly",
    "Best Actor of 1991",
    "Charge for cash",
    "Large chamber group",
    "Ancient Greek coins",
    "Pickup attachment",
    "Treat like a hero, maybe",
    "Start of something big?",
    "Shooting star, maybe",
    "Mad magazine cartoonist Dave",
    "In direct opposition",
    "Gaudy jewelry, in slang",
    "Broad",
    "Spoonful, say",
    "Alphabet quartet",
    "Trail to follow",
    "Bygone blades",
    "Kitten \\"mitten\\"",
    "Ring figure",
    "Second string",
    "It's quite different from the high-school variety",
    "Bossman or bosswoman",
    "Stinky, as gym clothes",
    "Pizza place",
    "Capri, e.g., to a Capriote",
    "Magazine founded by Bob Guccione",
    "___ of Nantes, 1598",
    "\\"Super Duper ___\\" (anime series)",
    "Transfix",
    "Eurasian ducks",
    "Climactic scene in \\"Hamlet\\"",
    "Parrying weapon",
    "Blackmore's Lorna",
    "\\"Forty Miles of Bad Road\\" guitarist",
    "Flip over",
    "City 70 miles SSW of Toledo",
    "Some offensive linemen: Abbr.",
    "Port near Nazareth",
    "Purveyor of chips",
    "Open court hearing",
    "___ state",
    "Viking, for one",
    "___-à-porter",
    "\\"And ___ thou slain the Jabberwock?\\": Carroll",
    "Spillane's \\"___ Jury\\"",
    "Within striking distance",
    "La Scala cheer",
    "\\"It's c-c-c-cold!\\"",
    "Events registered by seismometers, in brief",
    "Resident: Suffix",
    "Foamcore component",
    "Pipsqueak",
    "Word with page or wood",
    "___ Stadium, opened in 1923",
    "\\"Doctor Zhivago\\" role",
    "Feeling evoked in drama",
    "Basketball datum",
    "Deserving a lower insurance premium",
    "Security system component",
    "Playground retort",
    "Army supply officer",
    "Prefix with economics",
    "Celtic speaker",
    "___ beetle",
    "\\"Don't even bother\\"",
    "Spigoted vessel",
    "Italie et Allemagne",
    "Single-handedly",
    "Equitable way to return a favor",
    "Sun Valley locale: Abbr.",
    "Invoice amount",
    "Egg roll topping, perhaps",
    "Once known as",
    "Untold millennia",
    "Half brother of Tom Sawyer",
    "Moreover",
    "Manhattan part",
    "Impersonated",
    "Thatched",
    "Perfume ingredient",
    "Mrs. Woody Allen",
    "It may be bilateral",
    "Belgian city with an 1854 manifesto",
    "Like shorelines, often",
  ],
  "copyright": "© 2008, The New York Times",
  "fileVersion": "1.3",
  "height": 21,
  "isScrambled": false,
  "markupGrid": Array [
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    128,
    128,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    128,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    128,
    128,
    128,
    ,
    ,
    ,
    ,
    128,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    128,
    128,
    ,
    ,
    128,
    128,
    ,
    ,
    ,
    128,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
    ,
  ],
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 63979,
    "unknown1": 8281,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 134,
  "rebus": Object {
    "grid": Array [
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
      ,
    ],
  },
  "solution": "SAIDSO..LAMBDA.PRUDESACCEPT.RAWDEAL.REPENTGUYFAWKESNIGHT.ONSITE...ARAIL...GLOOM..MIR.ROCKYMOUNTAINBIGHORNJAPES...LAURA.TSETSESUTE..OSCARS..SAILS...SIRANTHONYHOPKINS.MOBTOETOTOE...BLING.DAME...MNOP..SPOOR..BOXERPROFESSIONALWRESTLINGRIVET..SMEWS..DUEL...EPEE.DOONE...LIMAOHIOZEN.PUBLISHINGCOMPANY...BRAVA..ATESTS..ITESTYRENE.PASHA...SAFERQUARTERMASTERGENERAL.URN..ETATS...ALONE...INKIND.CHINESEMUSTARDREEDED.ROSEOIL.SOONYITREATY.OSTEND..ERODED",
  "state": "------..------.------------.-------.--------------------.------...-----...-----..---.-------------------------...-----.----------..------..-----...-----------------.-----------...-----.----...----..-----..-------------------------------..-----..----...----.-----...-----------.-----------------...-----..------..----------.-----...-------------------------.---..-----...-----...------.--------------------.-------.------------.------..------",
  "title": "NY Times, Sun, Jul 20, 2008  ACROSS THE BOARD",
  "width": 21,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "unicode.puz" 1`] = `
Object {
  "author": "Chris Pickel",
  "clues": Array [
    "💆🏻‍♂️",
    "☀️",
    "φ",
    "量",
    "Ω",
    "🔥🔥🔥",
  ],
  "copyright": "2018, Chris Pickel, under MIT License",
  "fileVersion": "2.0",
  "height": 3,
  "isScrambled": false,
  "markupGrid": Array [
    8,
    8,
    8,
    8,
    8,
    8,
    8,
    8,
    8,
  ],
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 6,
  "rebus": Object {
    "state": Array [
      ,
      ,
      "ABC",
      ,
      ,
      ,
      ,
      ,
      "TUV",
    ],
  },
  "solution": "SPAOHMLIT",
  "state": "spaohmlit",
  "title": "⚔️",
  "width": 3,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "unicode_with_state.puz" 1`] = `
Object {
  "author": "Chris Pickel",
  "clues": Array [
    "💆🏻‍♂️",
    "☀️",
    "φ",
    "量",
    "Ω",
    "🔥🔥🔥",
  ],
  "copyright": "2018, Chris Pickel, under MIT License",
  "fileVersion": "2.0",
  "height": 3,
  "isScrambled": false,
  "markupGrid": Array [
    8,
    8,
    8,
    8,
    8,
    8,
    8,
    8,
    8,
  ],
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 0,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 6,
  "rebus": Object {
    "state": Array [
      ,
      ,
      "ABC",
      ,
      ,
      ,
      ,
      ,
      ,
    ],
  },
  "solution": "SPAOHMLIT",
  "state": "spaohmlit",
  "title": "⚔️",
  "width": 3,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "washpost.puz" 1`] = `
Object {
  "author": "By Raymond Hamel",
  "clues": Array [
    "Mary's pet",
    "Hit high in the air",
    "Caruso solo",
    "Simplified signature",
    "Censor",
    "Disagreement",
    "College admission factor",
    "Tractor attachment",
    "Eagle's nest",
    "Entice",
    "Cut, as a turkey",
    "French chicken dish",
    "Touch",
    "1983 Duran Duran hit",
    "Doggy doc",
    "Jargon suffix",
    "Kind of history",
    "On the sheltered side",
    "Theater awards",
    "Outburst of controversy",
    "Spoken",
    "Cite",
    "Aim for",
    "LAX listing",
    "JPEG file, often",
    "Rebuke to a backstabber",
    "Tanning lotion tube letters",
    "Soiled spots",
    "Succeed",
    "Green edge",
    "Graduate prog. award",
    "Magic word",
    "Keep quiet",
    "Draw off sherry",
    "Old Microsoft product",
    "Word before bubble or opera",
    "On-line game character",
    "Part of NEA",
    "Regrets",
    "Drink with sushi",
    "Chess corner piece",
    "Ally of the Missouri",
    "Record company name now licensed to an on-line pharmaceutical company",
    "Shiraz citizen",
    "Go unnoticed",
    "Sings and dances",
    "Like some wartime journalists",
    "Get rid of",
    "Haiku, for one",
    "Warm and cozy",
    "Signal receivers",
    "Make soaking wet",
    "\\"All the way with ___\\" (political slogan)",
    "Boss, usually following \\"El\\"",
    "___ Anne de Beaupré",
    "Choose",
    "Insulation material",
    "Protection",
    "Bea Arthur sitcom",
    "Shocking swimmer",
    "Fall into disuse",
    "Current sitcom set in Cleveland",
    "NBA target",
    "West ___ virus",
    "Big Ten school",
    "Lenin foe",
    "URL starter",
    "Very important",
    "Exercise accessory",
    "Paul Bunyan's tool",
    "Former NFL quarterback Kelly or Harbaugh",
    "Direction giver",
    "\\"There's no such thing as a free lunch,\\" e.g.",
    "On strike",
    "Police team",
    "Office aides",
    "Bit of bird chow",
    "Holliday's marshal friend",
  ],
  "copyright": "© 2005 Raymond Hamel.  Distributed by CrosSynergy(TM) Syndicate",
  "fileVersion": "1.2",
  "height": 15,
  "isScrambled": false,
  "misc": Object {
    "preamble": Object {
      "data": Array [
        99,
        115,
        48,
        53,
        49,
        50,
        48,
        54,
        46,
        112,
        117,
        122,
        10,
      ],
      "type": "Buffer",
    },
    "scrambledChecksum": 0,
    "unknown1": 61696,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 78,
  "solution": "LAMB.SPAT.CARVEORAL.ALEE.OBIESFIRESTORM.QUOTETAKEASWIPEAT......PIC.ETTU.SPFPHD.DOS..AVATARRUES.ROOK.IRANIESCAPEATTENTIONSHAKE.POEM.SNUGTUNERS..LBJ.STEOPT.FOAM.EEL......HOPEANDFAITHMAJOR.GUIDEPOSTAXIOM.IDLE.SWATTEMPS.SEED.EARP",
  "state": "----.----.---------.----.--------------.-----------------......---.----.------.---..----------.----.-------------------------.----.----------..---.------.----.---......-----------------.--------------.----.---------.----.----",
  "title": "December 6, 2005 - \\"Split Pea Soup\\"",
  "width": 15,
}
`;

exports[`puz parseBinaryFile extracts expected Puzzle object from "wsj110624.puz" 1`] = `
Object {
  "author": "  by Randolph Ross / Edited by Mike Shenk  ",
  "clues": Array [
    "Iditarod sight",
    "Croatian area known for a breed of dog",
    "The duck, in \\"Peter and the Wolf\\"",
    "Pilot's place",
    "Attacks a la \\"Ghostbusters\\"",
    "Hardly the gregarious sort",
    "Many an RPI grad",
    "Justice Dept. division",
    "Christina of \\"The Voice\\"",
    "Resistant",
    "Stare stupidly",
    "Expert on plays",
    "Wall St. event",
    "Lucy of \\"Kill Bill\\"",
    "East ender",
    "Shortfall indicator",
    "Org.",
    "Waiting with bated breath",
    "\\"Witness\\" group",
    "Good news for a British apartment seeker, bad news for a motorist",
    "He says \\"If music be the food of love, play on\\"",
    "Outfitted",
    "Conch cousin",
    "They go for a bite at night",
    "Insignificant",
    "Good news for a dieter, bad news for a London gambler",
    "State expos",
    "Start of a baby announcement",
    "Hypnotism pioneer Franz",
    "Gopher wood craft",
    "Agitated",
    "Some are liquid",
    "More fitting",
    "Spanish ayes",
    "Broadway fare",
    "Like three out of five people",
    "Guarantee",
    "Immobile",
    "\\"Dies ___\\"",
    "Have something",
    "Stand out",
    "New Mexico art colony",
    "Good news for a pitcher, bad news for labor management",
    "Lake dweller",
    "Iron Curtain setting",
    "Literature Nobelist Canetti",
    "Silent say-so",
    "Hip-hop producer Gotti",
    "Supporting arguments",
    "Liable",
    "Everyday",
    "\\"Topper\\" star Carroll",
    "Got",
    "Had a helping of humble pie",
    "Dow product",
    "It's called between combatants",
    "Mark with a mustache",
    "Take no action",
    "99-Across maker",
    "New York governor",
    "Designer Calvin",
    "Good news for a real estate developer, bad news for a mom",
    "Snowy bird",
    "Full of oneself",
    "Man, for one",
    "Like some partners",
    "Having more marbles",
    "Wishful words",
    "Good news for those on fixed incomes, bad news for bike tires",
    "Stare",
    "Cotton contraptions",
    "They're hit with hammers",
    "Soap additive",
    "\\"Oh, give me ___...\\"",
    "Camembert cousin",
    "Borscht bit",
    "Text",
    "Middle of Manchester",
    "Heat home",
    "He'll help you get carried away",
    "Start of a bedtime prayer",
    "On display",
    "Like some panels",
    "Lacoste of tennis",
    "Cowboys, at times",
    "Cantonese kreplach",
    "Smartened (up)",
    "Virgil, for one",
    "Colorado city",
    "Good news for a golfer, bad news for a commuter",
    "Michaels of \\"SNL\\"",
    "Sorry folks",
    "Maker of Clios and Kangoos",
    "Egyptian Christians",
    "Name in the \\"True Grit\\" credits",
    "Lemon, possibly",
    "Like some bonds",
    "Ouzo relative",
    "Overturned on appeal",
    "Little biter",
    "Twice as annoyed",
    "Go downhill",
    "Equal",
    "Oater chasers",
    "Half and half",
    "Pinch for le chef",
    "Wonder who's in the Rock and Roll Hall of Fame",
    "Verdi title bandit",
    "Good news for an Olympic athlete, bad news for a disc jockey",
    "Banded stones",
    "Did the honors on Thanksgiving",
    "Tel ___",
    "Look-___ (twins)",
    "Have some catching up to do",
    "\\"The Borgias\\" star",
    "Baseball teams",
    "Jerk",
    "Spanish teacher's group",
    "Desert flora",
    "Tendency toward disorder",
    "Clinton cabinet member Federico",
    "Monopoly quartet: Abbr.",
    "Escalation",
    "Bar tender?",
    "Hex",
    "Personal computer brand",
    "Good news for concert producers, bad news for speeders",
    "Base stores, in brief",
    "DDE's bailiwick",
    "ATM-making co.",
    "Looked after Junior",
    "Ball point?",
    "Advised about",
    "Night court call",
    "International accord",
    "German count start",
    "Like chocolates in a sampler",
    "Had a life",
  ],
  "copyright": "© 2011 Wall Street Journal",
  "fileVersion": "1.3",
  "height": 21,
  "isScrambled": false,
  "misc": Object {
    "preamble": undefined,
    "scrambledChecksum": 0,
    "unknown1": 18664,
    "unknown2": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "unknown3": 1,
  },
  "notepad": undefined,
  "numberOfClues": 138,
  "solution": "DOGSLED.AGUILERA.AGOGABALONE.VAMPIRES.MERELOSINGAFEWPOUNDS.ITSAMESMER.ARK....INASTIRAPTER.SIS.ASIAN.SHINETAOS.THREESTRIKES.NODIRV.PROS.USUAL.LEOG..ATECROW.TRUCE.SITBACK...HOUSEWORK.BOASTFULSILENT.GAPE.GINS.ALOEAHOME.BRIE.COPY.MIAMINOWI.SEEN.RENE.WONTONEPICPOET.LONGDRIVE...RENAULT.COPTS.USEDCAR..FLEA.SORER.PEER.ONESEL.BROKENRECORD.AVIVTRAIL.NINES.ASS.CLASEENTROPY....RRS.JAILERVAIO.EXPENSIVETICKETSINON.NEXTCASE.ENTENTEEINS.ASSORTED.EXISTED",
  "state": "-------.--------.-----------.--------.--------------------.----------.---....------------.---.-----.---------.------------.------.----.-----.----..-------.-----.-------...---------.--------------.----.----.---------.----.----.---------.----.----.--------------.---------...-------.-----.-------..----.-----.----.------.------------.---------.-----.---.------------....---.----------.--------------------.--------.-----------.--------.-------",
  "title": "June 24, 2011 - Good News, Bad News",
  "width": 21,
}
`;
